organisation des dossiers sur les pages html : - SPA : rassemblement des diffèrents composants des pages - dossiers pour chaque composant

--- a/Ecommerce_webServices_angular/src/main/webapp/partials/SPA.html
+++ b/Ecommerce_webServices_angular/src/main/webapp/partials/SPA.html
@@ -1,2 +1,2 @@
-<div ng-include="'partials/menu.html'"></div>
-<div ng-include="'partials/corps.html'"></div>
+<div ng-include="'partials/menu/menu.html'"></div>
+<div ng-include="'partials/corps/corps.html'"></div>
