--- a/Ecommerce_webServices_angular/src/main/webapp/partials/corps/corps.html
+++ b/Ecommerce_webServices_angular/src/main/webapp/partials/corps/corps.html
@@ -2,12 +2,12 @@
 		<div>
 			<div ng-switch on="typeUtilisateur.corps">
 				<div ng-switch-when="1">
-					<div ng-include="'partials/getAll.html'"></div>
+					<div ng-include="'partials/corps/getAll.html'"></div>
 				</div>
 				
-				<!-- nom du fichier à changer -->
+				<!-- nom du fichier html à changer -->
 				<div ng-switch-when="2">
-					<div ng-include="'partials/getAll.html'"></div>
+					<div ng-include="'partials/corps/getAll.html'"></div>
 				</div>
 			</div>
 		</div>
