--- a/Ecommerce_webServices_angular/src/main/webapp/partials/corps/getAll.html
+++ b/Ecommerce_webServices_angular/src/main/webapp/partials/corps/getAll.html
@@ -17,6 +17,6 @@
 </table>
 <form>
 
-	<button ng-controlleur="login" type="submit" ng-click="changeTypeUtilGest()">Menu gestionnaire</button>
-	<button ng-controlleur="login" type="submit" ng-click="changeTypeUtilClient()">Menu client</button>
+	<button ng-controlleur="login" type="submit" ng-click="changeTypeUtilGest()">Menu client</button>
+	<button ng-controlleur="login" type="submit" ng-click="changeTypeUtilClient()">Menu gestionnaire</button>
 </form>
