--- a/Ecommerce_webServices_angular/src/main/webapp/partials/corps/corps.html
+++ b/Ecommerce_webServices_angular/src/main/webapp/partials/corps/corps.html
@@ -5,9 +5,9 @@
 					<div ng-include="'partials/corps/getAll.html'"></div>
 				</div>
 				
-				<!-- nom du fichier html à changer -->
+				<!-- nom du fichier html Ã  charger -->
 				<div ng-switch-when="2">
-					<div ng-include="'partials/corps/getAll.html'"></div>
+					<div ng-include="'partials/corps/getAllCategories.html'"></div>
 				</div>
 			</div>
 		</div>
