--- a/Ecommerce_webServices_angular/src/main/webapp/partials/menu/menuGestionnaire.html
+++ b/Ecommerce_webServices_angular/src/main/webapp/partials/menu/menuGestionnaire.html
@@ -1,5 +1,7 @@
-	<nav class="navbar navbar-inverse">
-		<ul class="nav nav-pills" role="tablist">
-			<li role="presentation"><a href="#/gestionnaire/liste">Liste des catégories</a></li>
-		</ul>
-	</nav>
+
+<nav class="navbar navbar-inverse">
+	<ul class="nav nav-pills" role="tablist">
+		<li role="presentation"><a href="#/gestionnaire/listeCateg">Afficher les catÃ©gories</a></li>
+		<li role="presentation"><a href="#/gestionnaire/listeProd">Afficher les produits</a></li>
+	</ul>
+</nav>
