--- a/Ecommerce_webServices_angular/src/main/webapp/partials/gestionnaire/formAjoutProd.html
+++ b/Ecommerce_webServices_angular/src/main/webapp/partials/gestionnaire/formAjoutProd.html
@@ -12,9 +12,19 @@
 			ng-model="prod.description"></textarea>
 	</div>
 	<div class="form-group">
-		<label for="idCateg">ID catégorie</label> <input id="idCateg" type="number"
-			class="form-control" placeholder="ID catégorie" ng-model="prod.categorie.id_categorie">
+		<label for="prixProduit">Prix</label> <input id="prixProduit" type="text"
+			class="form-control" placeholder="Prix" ng-model="prod.prix">
 	</div>
+<!-- 	<div class="form-group"> -->
+<!-- 		<label for="idCateg">ID catégorie</label> <input id="idCateg" type="number" -->
+<!-- 			class="form-control" placeholder="ID catégorie" ng-model="prod.categorie.id_categorie"> -->
+<!-- 	</div> -->
+	<div class="form-group">
+		<label for="idCateg">Catégorie</label> 
+		<select ng-model="prod.categorie.id_categorie" >
+		<option ng-repeat="categ in allCategories" value="{{categ.id_categorie}}">{{categ.nom}}</option>
+		</select>
+	</div>	
 
 	<button class="btn btn-primary" ng-click="ajouterProd()">Ajouter</button>
 	<button type="reset" class="btn btn-danger">Annuler</button>
