--- a/Ecommerce_webServices_angular/src/main/webapp/partials/gestionnaire/formUpdateProd.html
+++ b/Ecommerce_webServices_angular/src/main/webapp/partials/gestionnaire/formUpdateProd.html
@@ -12,8 +12,20 @@
 			ng-model="prodForm.description"></textarea>
 	</div>
 	<div class="form-group">
-		<label for="idCateg">ID catégorie</label> <input id="idCateg" type="number"
-			class="form-control" placeholder="ID catégorie" ng-model="prodForm.categorie.id_categorie">
+		<label for="prixProduit">Prix</label> <input id="prixProduit"
+			type="text" class="form-control" placeholder="Prix"
+			ng-model="prodForm.prix">
+	</div>
+	<!-- 	<div class="form-group"> -->
+	<!-- 		<label for="idCateg">ID catégorie</label> <input id="idCateg" type="number" -->
+	<!-- 			class="form-control" placeholder="ID catégorie" ng-model="prodForm.categorie.id_categorie"> -->
+	<!-- 	</div> -->
+	<div class="form-group">
+		<label for="idCateg">Catégorie</label> <select
+			ng-model="prodForm.categorie.id_categorie">
+			<option ng-repeat="categ in allCategories"
+				value="{{categ.id_categorie}}">{{categ.nom}}</option>
+		</select>
 	</div>
 
 	<button class="btn btn-primary" ng-click="modifierProd()">Modifier</button>
