--- a/Ecommerce_webServices_angular/src/main/webapp/partials/gestionnaire/formAjoutProd.html
+++ b/Ecommerce_webServices_angular/src/main/webapp/partials/gestionnaire/formAjoutProd.html
@@ -12,7 +12,7 @@
 			ng-model="prod.description"></textarea>
 	</div>
 	<div class="form-group">
-		<label for="prixProduit">Prix</label> <input id="prixProduit" type="text"
+		<label for="prixProduit">Prix</label> <input id="prixProduit" type="number" step="any"
 			class="form-control" placeholder="Prix" ng-model="prod.prix">
 	</div>
 <!-- 	<div class="form-group"> -->
@@ -21,7 +21,7 @@
 <!-- 	</div> -->
 	<div class="form-group">
 		<label for="idCateg">Catégorie</label> 
-		<select ng-model="prod.categorie.id_categorie" >
+		<select ng-model="prod.categorie.id_categorie" class="form-control">
 		<option ng-repeat="categ in allCategories" value="{{categ.id_categorie}}">{{categ.nom}}</option>
 		</select>
 	</div>	
