--- a/Ecommerce_webServices_angular/src/main/webapp/partials/gestionnaire/getProduitsSearch.html
+++ b/Ecommerce_webServices_angular/src/main/webapp/partials/gestionnaire/getProduitsSearch.html
@@ -1,10 +1,10 @@
 <div align="center">
-<h1>Résultat de votre recherche</h1>
+<h1>{{message}}</h1>
 <br/>
 </div>
 
 <div class="table-responsive">
-<table class="table table-striped">
+<table class="table table-striped" ng-show="searchShow">
 	<tr>
 		<td style="font-weight: bold;" align="center">Id produit</td>
 		<td style="font-weight: bold;" align="center">Nom catégorie</td>
